--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
   font-family: serif;
 }
 
-html , body {
+html,
+body {
   width: 100%;
   height: 100%;
-  background-color: #EDD4D4;
+  background-color: #edd4d4;
 }
 
 #nav {
@@ -25,7 +26,6 @@ html , body {
 #nav input {
   width: 70%;
   height: 60px;
-  margin: 60px;
   border-radius: 10px;
   background-color: #631212;
   border: 1px solid #631212;
@@ -34,7 +34,7 @@ html , body {
   font-weight: 500;
   padding-left: 10px;
   position: sticky;
-  top: 40px;
+  top: 60px;
 }
 
 img {
@@ -45,10 +45,11 @@ img {
 }
 
 img:hover {
-  -webkit-transform: scale(2.2);
+  /* -webkit-transform: scale(2.2);
   -ms-transform: scale(2.2);
   transform: scale(1.2);
-  transition: 0s ease;
+  transition: 0s ease; */
+  box-shadow: 0px 16px 16px black;
 }
 
 #coffee-list {
@@ -64,22 +65,22 @@ img:hover {
 }
 
 #coffee-house {
-  background-color: #D7A1A1;
-  color: #A52A2A;
+  background-color: #d7a1a1;
+  color: #a52a2a;
   margin: 80px;
   padding: 25px;
-  border-radius:1px solid #A52A2A ;
+  border-radius: 1px solid #a52a2a;
   border-radius: 10px;
   box-shadow: 0px 0px 8px brown;
   width: 90%;
 }
 
 #coffee-item {
-  background-color: #D7A1A1;
-  color: #A52A2A;
+  background-color: #d7a1a1;
+  color: #a52a2a;
   margin: 80px;
   padding: 25px;
-  border-radius:1px solid #A52A2A ;
+  border-radius: 1px solid #a52a2a;
   border-radius: 10px;
   box-shadow: 0px 0px 8px brown;
   width: 90%;
@@ -87,7 +88,7 @@ img:hover {
 
 ol li {
   margin: 20px;
-} 
+}
 
 #coffee-item p {
   margin: 20px;
